ansible/roles/app/files/pacman-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pacman
  labels:
    name: pacman
  namespace: app-pacman
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    name: pacman
